<resources>
    <string name="app_name">VideoPlayer</string>
    <string name="backbutton">BackButton</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">forgot Password?</string>
    <string name="new_user">New User?</string>
    <string name="sign_up_intro">Sign Up</string>
    <string name="email_edit_text">Email</string>
    <string name="password_edit_text">Password</string>
    <string name="Heading_text">Enter your registered email address and password to login</string>

    <string name="sign_up">Sign Up</string>
    <string name="Sign_in_heading">Enter your name, email address and password to register</string>
    <string name="name">Name</string>
    <string name="duration">00:00</string>
    <string name="image">Image</string>
    <string name="loading">Loading..</string>
    <string name="semi_colon">:</string>
    <string name="lock">Lock Button</string>
    <string name="back_btn">Back Button</string>
    <string name="menu">Menu</string>
    <string name="prev_btn">Previous Button</string>
    <string name="next_btn">Next Button</string>
    <string name="repeat_btn">Repeat Button</string>
    <string name="fullscreen_btn">Fullscreen Button</string>
    <string name="play_btn">Play Button</string>
    <string name="video_name">Video Name</string>
    <string name="orientation">orientation\n</string>
</resources>