<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerNewActivity">

    <com.google.android.exoplayer2.ui.StyledPlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:controller_layout_id="@layout/custom_control_view"
        app:repeat_toggle_modes="all"
        />


    <LinearLayout
        android:id="@+id/topController"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:background="#42000000">

        <ImageButton
            android:id="@+id/backBtn_v"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/back_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            app:tint="@color/white" />

        <TextView
            android:id="@+id/videoTitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/video_name"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:singleLine="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:ellipsize="marquee"
            android:textStyle="bold"/>

        <ImageButton
            android:id="@+id/shareBtn"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/share_icon"
            android:backgroundTint="@android:color/transparent"
            android:contentDescription="@string/back_btn"
            app:tint="@color/white"

            android:padding="10dp"/>

    </LinearLayout>


    <ImageButton
        android:id="@+id/playPauseBtn"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:background="?android:selectableItemBackground"
        android:clickable="true"
        android:contentDescription="@string/play_btn"
        android:focusable="true"
        android:src="@drawable/play_arrow"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>



    <LinearLayout
        android:id="@+id/bottomController"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:orientation="horizontal"
        android:gravity="end|bottom">

<!--            <ImageButton-->
<!--                android:id="@+id/orientationBtn"-->
<!--                android:layout_width="45dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:background="?attr/selectableItemBackground"-->
<!--                android:src="@drawable/orientation_icon"-->
<!--                android:contentDescription="@string/orientation"-->
<!--                app:tint="@color/white" />-->

        <ImageButton
            android:id="@+id/repeatBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/repeat_btn"
            android:src="@drawable/exo_controls_repeat_off"
            app:tint="@color/white"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/prevBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/prev_btn"
            android:src="@drawable/previous_icon"
            app:tint="@color/white"
            tools:ignore="TouchTargetSizeCheck" />

        <ImageButton
            android:id="@+id/nextBtn"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/next_btn"
            android:src="@drawable/next_icon"
            app:tint="@color/white"
            tools:ignore="TouchTargetSizeCheck" />
            <ImageButton
                android:id="@+id/fullScreenBtn"
                android:layout_width="45dp"
                android:layout_height="match_parent"
                android:background="?attr/selectableItemBackground"
                android:src="@drawable/fullscreen_icon"
                android:contentDescription="@string/fullscreen_btn"
                app:tint="@color/white" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>