<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_signup"
    android:orientation="vertical"
    tools:context=".SignInActivity">


        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonback_signin"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/back_icon1"

                android:contentDescription="@string/backbutton">

            </Button>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/sign_in"
                android:textColor="@color/black"
                android:textSize="30sp"

                android:textStyle="bold"

                ></TextView>
        </androidx.appcompat.widget.Toolbar>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_gravity="center"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"

            android:text="@string/Heading_text"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="20sp" />


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view"
            android:layout_gravity="center"
            android:layout_width="350dp"
            android:layout_height="350dp"
            android:layout_marginTop="50dp"
            app:cardCornerRadius="10dp"
            android:outlineAmbientShadowColor="@color/black"


            >




            <EditText
                android:id="@+id/editTextEmailAddress_signin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20dp"
                android:layout_marginTop="65dp"
                android:layout_marginEnd="20dp"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:hint="@string/email_edit_text"
                android:autofillHints="" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                app:passwordToggleEnabled="true"
                android:layout_marginStart="20dp"
                android:layout_marginTop="150dp"
                android:layout_marginEnd="20dp"

            app:passwordToggleTint="@color/deep_red">

            <EditText
                android:id="@+id/editTextPassword_signin"

                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:hint="@string/password_edit_text"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:ems="15"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!--            <EditText-->
<!--                android:id="@+id/editTextPassword_signin"-->
<!--                android:layout_width="wrap_content"-->
<!--                android:layout_height="wrap_content"-->
<!--                android:layout_gravity="center_horizontal"-->
<!--                android:layout_marginStart="20dp"-->
<!--                android:layout_marginTop="150dp"-->
<!--                android:layout_marginEnd="20dp"-->
<!--                android:ems="20"-->
<!--                android:hint="@string/password_edit_text"-->
<!--                android:inputType="textPassword"-->
<!--                android:minHeight="48dp" />-->

            <Button
                android:id="@+id/buttonsignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="250dp"
                android:layout_marginEnd="20dp"
                android:layout_marginStart="20dp"
                android:background="@drawable/shape_button_rounded"
                android:textColor="@color/black"
                android:textSize="20sp"

                android:gravity="center"
                android:text="@string/sign_in" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:textColor="@color/link_blue"
                android:layout_marginTop="300dp"
                android:layout_marginEnd="60dp"
                android:layout_marginStart="20dp"/>

            <TextView
                android:id="@+id/newuser_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_user"

                android:textColor="@color/link_blue"
                android:layout_marginTop="300dp"

                android:layout_marginStart="70dp"

                />
            </LinearLayout>


        </androidx.cardview.widget.CardView>
    </LinearLayout>

</LinearLayout>